add api for weather-module.js

--- a/index.html
+++ b/index.html
@@ -10,5 +10,13 @@
 <body>
   <h1>Welcome to Weather api</h1>
   <p>Here is detail to get api data</p>
+  <ol type="1">
+    <li>
+      <a href="get-weather-today" target="_blank">Get weather today</a>
+    </li>
+    <li>
+      <a href="get-weathers-week" target="_blank">Get weathers week</a>
+    </li>
+  </ol>
 </body>
 </html>
