--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="get-weather-today" target="_blank">Get weather today</a>
     </li>
     <li>
-      <a href="get-weathers-week" target="_blank">Get weathers week</a>
+      <a href="get-weather-week" target="_blank">Get weathers week</a>
     </li>
   </ol>
 </body>
